manager/media/style/ClipperModern/style.css
/* ... */
form label {
	cursor: pointer;
}
fieldset {
	border: none;
}
input, select, textarea, option, optgroup, td {
	font: inherit;
	color: inherit;
}
	.rtl input,
	.rtl select,
	.rtl textarea,
	.rtl td {
		text-align: right;
	}
#ta, .tmplvars textarea {
	font-size: 130%;
	font-family: monospace;
}
form input[type=text],
form textarea {
	color: #333;
	border: 1px solid #DDD;
	border-left-color: #CCC;
	border-top-color: #CCC;
	padding: 10px 8px;
	margin: 1px 0;
	background: #FFF url(images/misc/input-bg.jpg) repeat-x top left;
	vertical-align: baseline;
}
	.rtl form input[type=text],
	.rtl form textarea {
		padding: 2px 2px 2px 0;
	}
	
.sectionBody.tmplvars table input,
.sectionBody.tmplvars table textarea {
	padding-right: 0 !important;
}
.sectionBody.tmplvars table input[type="button"] {
	padding-right: 4px !important;
}

input.checkbox,
input.radio,
input.submit,
input.button,
input[type="checkbox"],
input[type="radio"],
input[type="submit"],
input[type="button"] {
	position: relative;
	top: -1px;
	height: auto !important;
	width: auto !important;
	vertical-align: middle;
	padding: 9px  4px 9px 4px!important;
	border: 1px solid #DDD;
	margin: 0 2px;
	background: #FFF url(images/misc/button-gradient.jpg) repeat-x center 5px;
	-webkit-box-shadow: 0 0 3px #DDD;
	-moz-box-shadow: 0 0 3px #DDD;
	box-shadow:  0 0 3px #DDD;
	cursor: pointer;
}
input[type="button"]:hover {
	background: #FFF url(images/misc/button-gradient.jpg) repeat-x bottom left;
	-webkit-box-shadow: 0 0 10px #b8c7d6;
	-moz-box-shadow: 0 0 10px #b8c7d6;
	box-shadow:  0 0 10px #b8c7d6;	
}
select {
	border: 1px solid;
	border-color: #CCCCCC #DDDDDD #DDDDDD #CCCCCC;
	background: #fcfcfc;
	padding: 10px 8px;
	margin: 1px 0;
	background: #FFF url(images/misc/input-bg.jpg) repeat-x top left;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	margin: 1px 0;
}

.sectionBody select, #settingsPane select{
	line-height: 37px;
	height: 37px;
}

input.checkbox,
input[type="checkbox"],
input.radio,
input[type="radio"] {
	padding: 0 !important;
	background-image: none !important;
	border: none !important;
	box-shadow: 0 0 0 #FFF !important;	
}	

.form {
	padding: 15px;
	border: solid 1px #ddd;
}
form input.hidden {
	display: none !important;
	position: absolute;
}
.form label,
.form input,
.form textarea {
	display: block;
	float: left;
	vertical-align: middle;
}
.form label {
	padding-right: 20px;
	text-align: right;
	width: 110px;
}
	.rtl .form label,
	.rtl .form input,
	.rtl .form textarea {
		float: right;
	}
	.rtl .form label {
		padding-left: 20px;
		text-align: left;
	}
form textarea {
	height: 75px;
	width: 300px;
	margin-top: 0;
	margin: 1px 0;	
}
.form legend {
	color: #04C;
	font-weight: bold;
	padding: 5px;
}
.form select {
	display: inline;
	float: left;
}
	.rtl .form select {
		float: right;
	}
.form br {
	clear: both;
}
input.submit {
	display: block !important;
	float: none !important;
	margin: 20px 0 0 140px !important;
}
	.rtl input.submit {
		margin: 20px 140px 0 0 !important;
	}
.form fieldset.list {
	margin: 6px 6px 3px 0;
}
	.rtl .form fieldset.list {
		border: 0;
		padding: 0 !important;
		margin: 6px 0 3px 6px;
	}
.form fieldset.list legend {
	display: none;
}
.form fieldset.list label,
.form fieldset.list input {
	padding: 0;
	margin: 0 0 3px;
	float: left;
	display: inline;
	border: 0;
	background: none;
	width: auto;
	height: auto;
}
	.rtl .form fieldset.list label,
	.rtl .form fieldset.list input {
		float: right;
	}
.form fieldset.list label {
	padding-left: 5px;
	text-align: left;
	width: auto;
}
form#mutate input.inputBox:focus,
form#mutate input:focus,
form#mutate textarea:focus,
div.tmplvars input:focus,
form#mutate input.inputBox:hover,
form#mutate textarea:hover,
div.tmplvars input:hover{
	border-color: #C0C0C0 #D6D6D6 #D6D6D6 #C0C0C0;
	-moz-box-shadow: 0 0 4px #DDD;
	-webkit-box-shadow: 0 0 4px #DDD;
	box-shadow: 0 0 4px #DDD;
}
/* -------------------------[ Misc stuff ]--- */
.sectionBody fieldset {
	border: 0;
	background: #fff;
	font-size: 12px;
	padding: 10px;
}
.sectionBody fieldset h3 {
	font-size: 14px;
	color: #789;
	font-weight: bold;
	padding-bottom: 0;
	margin-bottom: 0;
}
.sectionHeader, .showHideVisible {
	margin: 0 10px;
	padding: 5px 3px 5px;
	font-weight: bold;
	color: #333;
	border: 1px solid #e3e3e3;
	border-bottom:none;
}
	.tab-page .sectionHeader {
		margin: 10px 10px 0;
	}
	.rtl .sectionHeader {
		direction: rtl;
		padding: 5px 18px 5px 3px;
	}
.sectionBody, .layerVisible {
	position: relative;
	display: none;
	background: #fff;
	border: 1px solid #e3e3e3;
	border-top: 1px solid #e3e3e3;
	margin: 0 0 10px;
	padding: 10px;
	display: block;
	background: #fff url(images/misc/tabareabg.gif) repeat-x top;
}
	.tab-page .sectionBody {
		margin: 0 10px 0;
	}
	.rtl .sectionBody, .layerVisible {
		direction: rtl;
		position: inherit;
	}
.showHideVisible, .layerVisible {
	margin: 0 10px 4px;
}
.sectionHeader {
	padding: 5px 3px 5px 18px;
	background: #EFEFEF url(images/misc/fade.gif) repeat-x top;
}
	.rtl .sectionHeader {
		direction: rtl;
		padding: 5px 18px 5px 3px;
	}
.comment {
	font-size: 12px;
	color: #333;
}
thead, .fancyrow {
	color: #333;
	height: 18px !important;
	background-color: #E4E4E4;
}
thead td {
	color: #333;
	border-top: 1px solid #fff;
}
.fancyrow2 {
	height: 18px !important;
	background-color: #F0A62F;
	background-position: top;
	background-repeat: repeat-x;
	border-bottom: 1px solid #fff;
	color: #fff;
}
li {
	padding: 0;
	margin: 0;
	list-style: disc outside url(images/misc/li.gif);
}
ul {
	margin: 0 20px 0 20px;
}
	.rtl ul {
		margin: 0 10px 0 20px;
	}
.screen {
	border: 1px solid #ddd;
	text-align: center;
}
a img {
	border: 0;
}
.even {
	background: #D9E7C2;
}
.odd {
	background: #fff;
}
/* -------------------------[ end sortable table ]--- */
.disabledImage {
	width: 20px;
	opacity: 0.3;
	filter: alpha(opacity=30);
}
.disabledImage img {
	border: 0;
}
.editorCell {
	border-top: 1px solid #808080;
	text-align: left;
	vertical-align: baseline;
}
/* ... */

